# rust_interop

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build_all.ps1  build_all.sh  run.ps1  run.sh
src/: CMakeLists.txt  interop.rs  lib.rs  main.c
src/interop/: detail.rs
